# circuitpython_latching_relay

./: .bumpversion.cfg  .pre-commit-config.yaml  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
circuitpython_latching_relay/: __init__.py
